--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+  *{
+    margin: 0;
+  }
   body{
     margin: 0;
     font-family: 'Roboto', sans-serif;
@@ -89,18 +92,20 @@
     margin-top: 50px;
   }
   /*=================================== recipe section =====================================*/
-  .last-section{
-    
+  .bgc-color{
+    background-image:linear-gradient(180deg,#dfeff8,#EBF8FF);
+    padding-bottom: 70px;
+
   }
-  .last-section> h2{
+  .bgc-color> h2{
     font-size: 40px;
     margin-bottom:10px;
-    margin-top: 60px;
+    padding-top: 60px;
     font-weight:bolder;
     color: #464444;
     text-align: center;
   }
-  .last-section>  p{
+  .bgc-color>  p{
     font-weight: 100;
     color: #808080;
     width: 45%;
@@ -116,6 +121,7 @@
     padding: 20px;
     border-radius: 20px;
     box-shadow: 0px 0px 40px #ccc;
+    background-color: #fff;
    
   }
   .rec img{
@@ -150,9 +156,10 @@
   .social-media{
     display: flex;
     width: 90%;
-    margin: 70px auto;
+    margin: 70px auto 0px;
     box-shadow: 0px 0px 40px #ccc;
     border-radius: 20px;
+    background-color: #fff;
   }
   .followers{
     width: 30%;
@@ -170,9 +177,11 @@
     color: #808080;
   }
   footer{
-    background-image:linear-gradient(50deg,#98D5FC,#EBF8FF);
-    padding-bottom: 50px;
-    padding-top: 20px;
+    background-image:url(images/222.jpg);
+    background-repeat: no-repeat;
+    background-size: 100vw;
+    padding-bottom: 70px;
+    padding-top: 30px;
   }
   footer h2{
     font-size: 30px;
@@ -183,6 +192,10 @@
   }
   footer p{
     font-weight: 100;
-    color: #808080;
+    color: #464444;
     text-align: center;
+  }
+  .footer-colord-part{
+    color:#0b65af;
+    font-size: 35px;
   }
