--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@
     color: #808080;
   }
   footer{
-    background-image:url(images/222.jpg);
+    background-image:url(images/footer-image.jpg);
     background-repeat: no-repeat;
     background-size: 100vw;
     padding-bottom: 70px;
